--- a/deliver/README
+++ b/deliver/README
@@ -1,1 +1,4 @@
+Link to the initial documentation for the article:
 
+
+https://colab.research.google.com/drive/1wPIykUu6MUhz7HeYoesajYlYKoeVE_S4?authuser=1#scrollTo=VTBiC0bB5tX7
