--- a/deliver/README
+++ b/deliver/README
@@ -1,1 +1,1 @@
-In this folder is found the article, reproducible article. The reproducible article was created using the document jupyter notebook, so it has the name "Reproduction_procedures.ipynb"
+In this folder is found the final article and the reproducible file. The reproducible article was created using the software jupyter notebook, so it has the extation ".ipynb". In this work it is called "Reproduction_procedures.ipynb"
